--- a/assets/HTML/certificates.html
+++ b/assets/HTML/certificates.html
@@ -13,26 +13,27 @@
 </head>
 
 <body>
-    <header class="header__certificate">
+    <header class="header__certificate" id="#top">
         <h1 class="certificates__title">Meus Certificados</h1>
     </header>
     <main>
         <section id="section5__certificates">
             <div class="certificates">
+
                 <div class="certificates__box">
                     <iframe class="certificates__pdf"
                         src="https://drive.google.com/file/d/1ODibchEprIGc19OVUpR9DwByB6cyBDDR/preview"
                         title="Tech in Microsoft"></iframe>
                     <div class="description">
                         <h2>Tech in Microsoft</h2>
-                        <p id="lessText1">Esse é um projeto de extensão que<span id="dots1">...</span><span id="moreText1"
-                            style="display: none;"> tem o intuito de inserir os alunos nas trilhas de
-                            formação da Microsoft tanto com o objetivo de aprofundar
-                            os conhecimentos nas tecnologias Microsoft, requeridas pelo mercado de trabalho, quanto
-                            de capacitar nossos alunos para inovarem e buscarem soluções diferenciadas na área de
-                            TI&C com tecnologias dessa big tech. Além disso, esse projeto será um efetivo apoio para
-                            a compreensão de competências relativas à inteligência artificial, que são requeridas na
-                            UC de Inteligência Artificial de TI&C.</span>
+                        <p id="lessText1">Esse é um projeto de extensão que<span id="dots1">...</span><span
+                                id="moreText1" style="display: none;"> tem o intuito de inserir os alunos nas trilhas de
+                                formação da Microsoft tanto com o objetivo de aprofundar
+                                os conhecimentos nas tecnologias Microsoft, requeridas pelo mercado de trabalho, quanto
+                                de capacitar nossos alunos para inovarem e buscarem soluções diferenciadas na área de
+                                TI&C com tecnologias dessa big tech. Além disso, esse projeto será um efetivo apoio para
+                                a compreensão de competências relativas à inteligência artificial, que são requeridas na
+                                UC de Inteligência Artificial de TI&C.</span>
                             <button onclick="myFunction('moreText1', 'dots1', 'myBtn1')" id="myBtn1">Ler mais</button>
                         </p>
                         <p class="description__course_workload"> Carga horária: 60h</p>
@@ -51,8 +52,45 @@
                                 nuvem, arquiteturas e desenvolvimento de nuvens
                                 e, análise de dados em nuvem.</span>
                             <button onclick="myFunction('moreText2', 'dots2', 'myBtn2')" id="myBtn2">Ler mais</button>
-                            <br>
                         <p class="description__course_workload"> Carga horária: 60h</p>
+                    </div>
+                </div>
+
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1k1ZglJPFQl1-n-XwB0Ei_Gm6mN7RWLYC/preview"
+                        title="Programming Introduction (Oracle)"></iframe>
+                    <div class="description">
+                        <h2>Programming Introduction (Oracle)</h2>
+                        <p id="lessText3">O Curso Programming Introduction (Oracle)<span id="dots3">...</span><span
+                                id="moreText3" style="display: none;"> tem o objetivo de capacitar os alunos para as
+                                trilhas de certificação do Oracle Academy, iniciando com a formação mais básica, para
+                                compreender as perspectivas da lógica e da programação e dando suporte para as trilhas
+                                de
+                                formação mais específicas e profissionais, por exemplo, Java fundamentals, Java
+                                Foundations,
+                                Java Programming e etc. Esse projeto terá o acompanhamento sistemático dos alunos
+                                Embaixadores Oracle e de professores em jornada da Anima</span>
+                            <button onclick="myFunction('moreText3', 'dots3', 'myBtn3')" id="myBtn3">Ler mais</button>
+                        <p class="description__course_workload"> Carga horária: 40h</p>
+                    </div>
+                </div>
+
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1TYXIrmcHYTVgyEUogunPlBvNH8T6bv0H/preview"
+                        title="PROJETO LIDERANDO"></iframe>
+                    <div class="description">
+                        <h2>Projeto Liderando</h2>
+                        <p id="lessText4">É um projeto que tem como objetivo<span id="dots4">...</span><span
+                                id="moreText4" style="display: none;"> estimular o engajamento dos estudantes no
+                                processo de
+                                representação, para atuarem na defesa dos interesses discentes no plano institucional,
+                                fortalecendo o dialogo com corpo docente e coordenadores de curso e prestando
+                                assistência
+                                para a mediação de conflitos.</span>
+                            <button onclick="myFunction('moreText4', 'dots4', 'myBtn4')" id="myBtn4">Ler mais</button>
+                        <p class="description__course_workload">1º Semestre como Líder da turma</p>
                     </div>
                 </div>
 
@@ -62,7 +100,7 @@
                         title="Java Foundations da Oracle Academy"></iframe>
                     <div class="description">
                         <h2>Java Foundations - Oracle Academy</h2>
-                        <p id class="lessText3">O curso Java Foundations<span id="dots3">...</span><span id="moreText3"
+                        <p id class="lessText5">O curso Java Foundations<span id="dots5">...</span><span id="moreText5"
                                 style="display: none;"> da Oracle Academy é um programa abrangente que
                                 introduz os alunos
                                 aos conceitos de programação orientada a
@@ -74,63 +112,77 @@
                                 introdução ao JavaFX. Com uma duração total recomendada de 90 horas, o curso é adequado
                                 para
                                 estudantes que desejam aprender programação em Java e construir sua experiência em
-                                programação orientada a objetos usando Java.
-                            </span>
-                            <button onclick="myFunction('moreText3', 'dots3', 'myBtn3')" id="myBtn3">Ler mais</button>
+                                programação orientada a objetos usando Java.</span>
+                            <button onclick="myFunction('moreText5', 'dots5', 'myBtn5')" id="myBtn5">Ler mais</button>
                             <br>
                         <p class="description__course_workload"> Carga horária: 90h</p>
                     </div>
                 </div>
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
-                        src="https://drive.google.com/file/d/1k1ZglJPFQl1-n-XwB0Ei_Gm6mN7RWLYC/preview"
-                        title="Certificado 4"></iframe>
-                    <div class="description">
-                        <h2>Descrição do Certificado 4</h2>
-                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
-                        </p>
-                    </div>
-                </div>
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
-                        src="https://drive.google.com/file/d/1TYXIrmcHYTVgyEUogunPlBvNH8T6bv0H/preview"
-                        title="Certificado 5"></iframe>
-                    <div class="description">
-                        <h2>Descrição do Certificado 5</h2>
-                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
-                        </p>
-                    </div>
-                </div>
+
                 <div class="certificates__box">
                     <iframe class="certificates__pdf"
                         src="https://drive.google.com/file/d/1HlAmBE8_4DVSX8I1yVjSoCGfHSfNUsxR/preview"
-                        title="Certificado 6"></iframe>
+                        title="Diploma Técnico em Comércio"></iframe>
                     <div class="description">
-                        <h2>Descrição do Certificado 6</h2>
-                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
-                        </p>
+                        <h2>Diploma Técnico em Comércio</h2>
+                        <p id class="lessText6">O curso de Técnico em Comércio é<span id="dots6">...</span><span
+                                id="moreText6" style="display: none;"> um programa educacional integrado ao ensino
+                                médio, oferecido
+                                pelo Centro Estadual de Educação Profissional em Gestão e Meio Ambiente. Este curso está
+                                sob
+                                o Eixo Tecnológico de Gestão e Negócios e foi concluído no ano de 2019.
+
+                                A formação técnica em Comércio capacita o aluno com habilidades e conhecimentos
+                                necessários
+                                para navegar no mundo dos negócios e do comércio. Este diploma confere ao aluno os
+                                direitos
+                                e prerrogativas para uma carreira no setor de comércio.</span>
+                            <button onclick="myFunction('moreText6', 'dots6', 'myBtn6')" id="myBtn6">Ler mais</button>
+                            <br>
+                        <p class="description__course_workload"> Carga horária: 4.440h</p>
                     </div>
                 </div>
+
                 <div class="certificates__box">
                     <iframe class="certificates__pdf"
                         src="https://drive.google.com/file/d/1GQiSVULUI0w7ep6We47AapIujK40y8l8/preview"
-                        title="Certificado 7"></iframe>
+                        title="Assistente de Produção"></iframe>
                     <div class="description">
-                        <h2>Descrição do Certificado 7</h2>
-                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
-                        </p>
+                        <h2>Assistente de Produção</h2>
+                        <p id class="lessText7">O curso de Assistente de Planeja<span id="dots7">...</span><span
+                                id="moreText7" style="display: none;">mento, Programação e Controle de Produção
+                                oferecido pelo
+                                SENAI prepara profissionais para auxiliar na administração e produção de processos
+                                industriais. O curso segue normas e procedimentos técnicos de qualidade, segurança,
+                                higiene
+                                e saúde. É uma excelente opção para quem deseja aprimorar suas habilidades no campo da
+                                produção industrial.</span>
+                            <button onclick="myFunction('moreText7', 'dots7', 'myBtn7')" id="myBtn7">Ler mais</button>
+                            <br>
+                        <p class="description__course_workload"> Carga horária: 476h</p>
                     </div>
                 </div>
+
                 <div class="certificates__box">
                     <iframe class="certificates__pdf"
                         src="https://drive.google.com/file/d/1RZUEhgv1mYtRCecIMXVcoh_HujP_x5Td/preview"
                         title="Certificado 8"></iframe>
                     <div class="description">
                         <h2>Descrição do Certificado 8</h2>
-                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
-                        </p>
+                        <p id class="lessText8">O curso de Aprendizagem Profis<span id="dots8">...</span><span
+                                id="moreText8" style="display: none;">sional Comercial em Serviços Administrativos do
+                                SENAC prepara
+                                os alunos para executar atividades administrativas em várias organizações. O curso
+                                abrange
+                                tópicos como recepção, procedimentos administrativos, controle de documentos e rotinas
+                                de
+                                admissão e demissão de colaboradores.</span>
+                            <button onclick="myFunction('moreText8', 'dots8', 'myBtn8')" id="myBtn8">Ler mais</button>
+                            <br>
+                        <p class="description__course_workload"> Carga horária: 476h</p>
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
@@ -139,6 +191,7 @@
         <div class="footer__title">
             <p> 2023 Copyright ©. Todos os direitos reservados</p>
         </div>
+
         <div class="social__footer">
             <a class="social__link_footer" href="https://www.github.com/alvesjaov" target="_blank"
                 rel="noopener noreferrer" title="GitHub"><svg xmlns="http://www.w3.org/2000/svg"
@@ -159,10 +212,11 @@
                         d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                 </svg></a>
         </div>
-    </footer>
 
-    </main>
+    </footer>
     <script src="/assets/JS/read-more-less-button.js"></script>
+    <script src="/assets/JS/scroll-animation.js"></script>
+    <script src="/assets/JS/scroll-smooth.js"></script>
 </body>
 
 </html>
